# TrustVault3-multichain

./: README.md  TrustVault_Mainnet_Plan.csv  main_old.css  trustvault_mainnet_estimate.csv
artifacts/: approval.teal  contract.json
projects/TrustVault-contracts/evm/: hardhat.config.ts  mass-deploy.js  mass-deploy.ps1
projects/TrustVault-contracts/evm/cache/: solidity-files-cache.json
projects/TrustVault-contracts/evm/contracts/: TrustVault.sol
projects/TrustVault-contracts/evm/scripts/: deploy-all.ts  deploy.ts  mass-deploy.ts
projects/TrustVault-contracts/solana/: Anchor.toml  Cargo.toml  build.sh  package.json
projects/TrustVault-contracts/solana/programs/trust_vault/: Cargo.toml
projects/TrustVault-contracts/solana/programs/trust_vault/src/: lib.rs
projects/TrustVault-frontend/: build_error.txt  debug.css  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vite.config.ts.timestamp-1773943540366-a205409c17992.mjs
projects/TrustVault-frontend/public/: index.html  manifest.json
projects/TrustVault-frontend/scripts/: monitor.ts
projects/TrustVault-frontend/src/: App.tsx  i18n.ts  main.tsx
projects/TrustVault-frontend/src/styles/: main.css  (+2 more)
temp-dev-test/: App.tsx  package-lock.json  package.json  test-integration.ts
temp-frontend-live/: index.html  package-lock.json  package.json
temp-frontend-live/src/: App.tsx  index.css
temp-frontend-live/src/adapters/: algorandAdapter.ts  comingSoonAdapter.ts  evmAdapter.ts  solanaAdapter.ts
temp-frontend-live/src/trustvault-sdk/: README.md  TrustVaultSDK.ts  package.json
(+44 files in other folders)
